umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_complexring1.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 49
bond_count: 56
sum_formula: C49
graph6: pqO_gOC?OA?C?C?A??_?G??o??_??_??O??E???O??@???A???C???A????_???C????O???@????@_????O????C?????_????B?????A?????A?????@??????_?????C??????O??????_??????_??????_??????K???????_??????A???????C???????F
