umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_complexring4.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 80
bond_count: 104
sum_formula: C80
graph6: ~?@OhC?GC@?GC_@@@????G?@??C??G?@G??C?@@???????_??@???@????_??@G???@???CC?????????G????C????@?????G????C_????@????@@????????????G?????@??????C??????G?????????????C??????@???????G???????_??????H???????@???????__???????????????@????????C????????G????????G????????c????????@????????GG?G???_????A????_?????????O?????????C???_??????_??K??????????G?????????CG?????????G?????????@_?????????CG????@??G???????@???_??????A??@????????A??O????O??@????????C??C?????????_?G?????????A?G???????????O??????G?????O?????A??????????O@??????????@??O????
