umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_indigo_crazystereo-badvalence.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 20
bond_count: 22
sum_formula: C18NS+2
graph6: ShEH?C@?G?_P?@??_?O?@??G??G??G??c
